@@ -12,7 +12,13 @@
 			<label index="label_no_subselectoritems_found">No items found to handle this module function.</label>
 			<label index="label_action">Action</label>
 			<label index="label_actions">Actions</label>
+			<label index="label_search">Search term</label>
 			<label index="label_btn_search">Search</label>
+
+			<label index="label_hidden">Hidden entries:</label>
+			<label index="label_select_hide_hidden">hide</label>
+			<label index="label_select_show_hidden">show</label>
+			
 			
 			<label index="msg_confirmation_deletion">Do you really wan't do delete this item?</label>
 		</languageKey>
@@ -21,7 +27,12 @@
 			<label index="label_action">Aktion</label>
 			<label index="label_actions">Aktionen</label>
 			<label index="msg_confirmation_deletion">Soll dieser Datensatz wirklich gelöscht werden?</label>
+			<label index="label_search">Suchbegriff</label>
 			<label index="label_btn_search">Suchen</label>
+
+			<label index="label_hidden">Versteckte Einträge:</label>
+			<label index="label_select_hide_hidden">verstecken</label>
+			<label index="label_select_show_hidden">zeigen</label>
 		</languageKey>
 	</data>
 </T3locallang>
