@@ -6,6 +6,7 @@
 v0.12.5 (??.03.2013)
  * Bugfix for pagebrowser. Thanks to Hannes Bochmann!
  * BE-Modules: Generic sorting in tables. Thanks to Hannes Bochmann and Thomas Reuleke!
+ * BE-Modules: Some changes in base_Lister. Thanks to Thomas Reuleke!
 
 v0.12.4 (14.03.2013)
  * Bugfix for SQL-error-logging. Thanks to Michael Wagner!
